# sp500-quant-sprint

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/metadata/: cleaning_adjustments.csv  cleaning_report.json  cleaning_stats.csv  data_snapshot.json  download_manifest.csv  feature_correlation_dropped.csv  feature_reduction_report.json  ic_summary.csv  integrity_per_ticker.csv  integrity_report.json  membership_snapshots.csv  pca_loadings.csv  prelisting_trimmed.csv  quarantine.csv  reconciliation.csv  rsi_buckets.csv  sp500_changes.csv  sp500_constituents.csv  sp500_membership_universe.csv  sp500_removed.csv
docs/: decisions.md  questions.md
reports/: week1_data_review.md  week1_signal_analysis.md  week2_features.md
scripts/: 01_fetch_universe.py  02_download_data.py  03_check_integrity.py  04_build_panel.py  05_clean_data.py  06_indicators.py  07_signal_analysis.py  08_visualize.py  09_membership.py  10_reconcile.py  11_build_features.py  12_reduce_features.py  _bootstrap.py
src/: __init__.py  config.py  storage.py
src/data/: __init__.py  clean.py  download.py  integrity.py  membership.py  panel.py  reconcile.py  snapshot.py  sources.py  universe.py
src/features/: __init__.py  dataset.py  indicators.py  lags.py  macro.py  reduce.py  signals.py  viz.py
src/utils/: __init__.py  logging_setup.py
tests/: test_clean.py  test_features.py  test_indicators.py  test_membership.py  test_pipeline.py  test_reconcile.py
